--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,14 @@
     "lib": ["dom", "es2015", "es2017"],
     "strict": true,
     "noEmit": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": false,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "sourceMap": true
   },
   "include": ["./src/**/*"]
 }
