--- a/package.json
+++ b/package.json
@@ -24,25 +24,32 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.7.1",
+    "@emotion/core": "^10.0.5",
+    "@emotion/styled": "^10.0.5",
+    "@mdx-js/mdx": "^0.15.3",
+    "@mdx-js/tag": "^0.15.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
     "emotion": "^9.2.9",
     "emotion-server": "^9.2.9",
-    "gatsby": "^2.0.3",
-    "gatsby-image": "^2.0.5",
-    "gatsby-plugin-canonical-urls": "^2.0.5",
-    "gatsby-plugin-emotion": "^2.0.5",
-    "gatsby-plugin-feed": "^2.0.11",
+    "gatsby": "^2.0.7",
+    "gatsby-image": "^2.0.8",
+    "gatsby-link": "^2.0.1",
+    "gatsby-mdx": "0.3.1-ci.225",
+    "gatsby-plugin-canonical-urls": "^2.0.8",
+    "gatsby-plugin-catch-links": "^2.0.2",
+    "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-manifest": "^2.0.2",
+    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-typescript": "^2.0.0",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-json": "^2.1.1",
+    "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.1",
     "modern-normalize": "^0.5.0",
@@ -54,6 +61,7 @@
     "react-dom": "^16.5.2",
     "react-emotion": "^9.2.9",
     "react-helmet": "^5.2.0",
+    "styled-components": "^4.1.3",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
@@ -62,6 +70,8 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-helmet": "^5.0.7",
+    "@types/styled-components": "^4.1.4",
+    "babel-plugin-emotion": "^10.0.5",
     "gh-pages": "^2.0.0",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
