--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^10.0.5",
     "@mdx-js/mdx": "^0.15.3",
     "@mdx-js/tag": "^0.15.0",
+    "@types/react-modal": "^3.6.0",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
     "emotion": "^9.2.9",
