--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.5",
     "@emotion/styled": "^10.0.5",
-    "@mdx-js/mdx": "^0.15.3",
-    "@mdx-js/tag": "^0.15.0",
+    "@mdx-js/mdx": "^0.16.5",
+    "@mdx-js/tag": "^0.16.5",
     "@types/react-modal": "^3.6.0",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
@@ -48,7 +48,6 @@
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
-    "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.3",
@@ -62,6 +61,7 @@
     "react-dom": "^16.5.2",
     "react-emotion": "^9.2.9",
     "react-helmet": "^5.2.0",
+    "react-syntax-highlighter": "^10.1.2",
     "styled-components": "^4.1.3",
     "typescript": "^3.0.3"
   },
