--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.1",
     "github-slugger": "^1.2.0",
+    "lodash-es": "^4.17.11",
     "modern-normalize": "^0.5.0",
     "normalize.css": "^8.0.0",
     "polished": "^2.0.3",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.10.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
