Populating the quickstarts

--- a/src/data/quickstarts/jekyll/now.json
+++ b/src/data/quickstarts/jekyll/now.json
@@ -1,6 +1,6 @@
 {
   "title": "Now",
-  "homepage": "https://github.com/barryclark/jekyll-now",
+  "repoUrl": "https://github.com/barryclark/jekyll-now",
   "thumbnail": "jekyll-now.png",
   "thumbnailUrl": "https://raw.githubusercontent.com/mattvh/jekyllthemes/master/thumbnails/jekyll-now.png",
   "slug": "now",
