--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-canonical-urls": "^2.0.8",
     "gatsby-plugin-catch-links": "^2.0.2",
     "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
