--- a/aerobatic.yml
+++ b/aerobatic.yml
@@ -98,6 +98,8 @@ plugins:
       /blog/automated-continuous-deployment-of-jekyll-sites: /docs/static-site-generators/#jekyll
       /blog/easy-hugo-continuous-deployment: /docs/static-site-generators/#hugo
       /blog/introducing-docker-pipeline: /docs/deployment/#continuous-deployment
+      /legal: /legal/tos/
+      /about: /
   - name: health-check
     path: /health
   - name: custom-errors
