--- a/aerobatic.yml
+++ b/aerobatic.yml
@@ -1,4 +1,4 @@
-# id: f593b673-75f2-4c7e-8a65-6e0d7a6e0f05
+id: f593b673-75f2-4c7e-8a65-6e0d7a6e0f05
 deploy:
   ignore: []
   directory: public
@@ -13,7 +13,7 @@ plugins:
   - name: http-headers
     options:
       security: true
-      "Content-Security-Policy": "default-src 'none'; img-src 'self' data: https://www.google-analytics.com https://www.google.com https://stats.g.doubleclick.net https://aerobatic-media.s3.amazonaws.com; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://www.google-analytics.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://d3js.org; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://*.algolianet.com https://*.algolia.net; form-action 'self'; base-uri 'self'; frame-ancestors 'self'"
+      "Content-Security-Policy": "default-src 'none'; img-src 'self' data: https://www.google-analytics.com https://www.google.com https://stats.g.doubleclick.net https://aerobatic-media.s3.amazonaws.com; script-src 'self' https://www.google-analytics.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://d3js.org; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://*.algolianet.com https://*.algolia.net; form-action 'self'; base-uri 'self'; frame-ancestors 'self'"
 
   - name: http-proxy
     path: /slack
