--- a/aerobatic.yml
+++ b/aerobatic.yml
@@ -13,7 +13,7 @@ plugins:
   - name: http-headers
     options:
       security: true
-      "Content-Security-Policy": "default-src 'none'; img-src 'self' data: https://www.google-analytics.com https://www.google.com https://stats.g.doubleclick.net https://aerobatic-media.s3.amazonaws.com; script-src 'self' https://www.google-analytics.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://d3js.org; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://*.algolianet.com https://*.algolia.net; form-action 'self'; base-uri 'self'; frame-ancestors 'self'"
+      'Content-Security-Policy': "default-src 'self'; img-src 'self' data: https://www.aerobatic.com https://www.google-analytics.com https://www.google.com https://stats.g.doubleclick.net https://aerobatic-media.s3.amazonaws.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google-analytics.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://d3js.org; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' data: https://fonts.gstatic.com https://cdnjs.cloudflare.com; connect-src 'self' https://*.algolianet.com https://*.algolia.net; form-action 'self'; base-uri 'self'; frame-ancestors 'self'"
 
   - name: http-proxy
     path: /slack
@@ -67,13 +67,13 @@ plugins:
     method: get
     options:
       resultsTemplate: /search/index.html
-      mustacheTags: ["<%=", "%>"]
+      mustacheTags: ['<%=', '%>']
   - name: redirect
     options:
       /docs: /docs/getting-started/
-      /docs/environment-variables: "/docs/configuration/#environment-variables"
+      /docs/environment-variables: '/docs/configuration/#environment-variables'
       /docs/api-proxy: /docs/plugins/http-proxy/
-      /docs/performance: "/docs/overview/#performance"
+      /docs/performance: '/docs/overview/#performance'
       /docs/ssl: /docs/custom-domains-ssl/
       /docs/custom-domains: /docs/custom-domains-ssl/
       /docs/automated-builds: /docs/static-generators/
@@ -91,7 +91,6 @@ plugins:
       /themes/*: /quickstarts/*
       /blog/hosting-swagger-api-documentation-wth-bitbucket: /blog/hosting-swagger-api-documentation
       /blog/announcing-aerobatic-transition: /
-      /blog/easy-hugo-continuous-deployment: /blog/hugo-bitbucket-pipelines/
       /blog/how-to-host-your-static-web-site-with-hexo-js: /docs/deployment/#continuous-deployment
       /blog/faster-website-deployment-with-bitbucket-and-s3: /docs/plugins/s3-proxy/
       /blog/basic-auth-for-static-web-sites: /docs/plugins/password-protect/
@@ -105,12 +104,4 @@ plugins:
   - name: custom-errors
     options:
       errors:
-        "404": 404.html
-
-scanne/blog/easy-hugo-continuous-deployment: /blog/hugo-bitbucket-pipelines/r:
-  keywordSearch:
-    noIndexPatterns:
-      - /tags/**
-      - /legal/**
-      - /search/**
-    titleStripStart: "Aerobatic - "
+        '404': 404.html
