--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "private": true,
   "author": "David Von Lehman <david@aerobatic.com>",
   "scripts": {
-    "build": "gatsby build",
+    "build": "NODE_ENV=production gatsby build",
     "clean": "rimraf public",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "dev": "gatsby develop --port 4000",
+    "dev": "NODE_ENV=development gatsby develop --port 4000",
     "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
     "lint": "tslint 'src/**/*.{ts,tsx}' -p tsconfig.json",
     "start": "npm run dev",
@@ -20,68 +19,72 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "@mdx-js/mdx": "^0.16.5",
-    "@mdx-js/tag": "^0.16.5",
-    "@types/react-modal": "^3.6.0",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
+    "@mdx-js/mdx": "^0.16.8",
+    "@mdx-js/tag": "^0.16.8",
+    "@types/react-modal": "^3.8.0",
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
-    "emotion": "^9.2.9",
-    "emotion-server": "^9.2.9",
-    "gatsby": "^2.0.7",
-    "gatsby-image": "^2.0.8",
-    "gatsby-link": "^2.0.1",
-    "gatsby-mdx": "0.3.1-ci.225",
-    "gatsby-plugin-canonical-urls": "^2.0.8",
-    "gatsby-plugin-catch-links": "^2.0.2",
-    "gatsby-plugin-emotion": "^4.0.1",
-    "gatsby-plugin-feed": "^2.0.11",
-    "gatsby-plugin-google-analytics": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.5",
-    "gatsby-plugin-sitemap": "^2.0.4",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-plugin-typescript": "^2.0.3",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-json": "^2.1.6",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.1",
-    "github-slugger": "^1.2.0",
+    "emotion": "^10.0.7",
+    "emotion-server": "^10.0.7",
+    "gatsby": "^2.0.116",
+    "gatsby-image": "^2.0.29",
+    "gatsby-link": "^2.0.10",
+    "gatsby-mdx": "0.3.5",
+    "gatsby-plugin-canonical-urls": "^2.0.10",
+    "gatsby-plugin-catch-links": "^2.0.10",
+    "gatsby-plugin-emotion": "^4.0.3",
+    "gatsby-plugin-feed": "^2.0.13",
+    "gatsby-plugin-google-analytics": "^2.0.13",
+    "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-offline": "^2.0.22",
+    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sitemap": "^2.0.5",
+    "gatsby-plugin-styled-components": "^3.0.5",
+    "gatsby-plugin-typescript": "^2.0.7",
+    "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-remark-images": "^3.0.3",
+    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-transformer-json": "^2.1.8",
+    "gatsby-transformer-remark": "^2.2.4",
+    "gatsby-transformer-sharp": "^2.1.13",
+    "github-slugger": "^1.2.1",
+    "graphql": "^14.1.1",
     "lodash-es": "^4.17.11",
     "modern-normalize": "^0.5.0",
-    "normalize.css": "^8.0.0",
-    "polished": "^2.0.3",
+    "normalize.css": "^8.0.1",
+    "polished": "^2.3.3",
     "prism-themes": "^1.0.1",
     "prismjs": "^1.15.0",
-    "react": "^16.5.2",
+    "react": "^16.8.0",
     "react-anchor-link-smooth-scroll": "^1.0.11",
-    "react-dom": "^16.5.2",
-    "react-emotion": "^9.2.9",
+    "react-dom": "^16.8.0",
+    "react-emotion": "^10.0.0",
     "react-helmet": "^5.2.0",
     "react-syntax-highlighter": "^10.1.2",
     "styled-components": "^4.1.3",
-    "typescript": "^3.0.3"
+    "typescript": "^3.3.1"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.6",
+    "@types/classnames": "^2.2.7",
     "@types/lodash-es": "^4.17.1",
-    "@types/node": "^10.10.1",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-helmet": "^5.0.7",
-    "@types/styled-components": "^4.1.4",
-    "babel-plugin-emotion": "^10.0.5",
-    "gh-pages": "^2.0.0",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "tslint": "^5.11.0",
+    "@types/node": "^10.12.21",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.8",
+    "babel-plugin-emotion": "^10.0.7",
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
+    "tslint": "^5.12.1",
     "tslint-config-blvd": "^1.2.1",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-plugin-prettier": "^2.0.0"
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1"
+  },
+  "resolutions": {
+    "graphql": "14.1.1"
   }
 }
