--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - run: npm install
       - run: npm install aerobatic-cli
       - run: NODE_ENV=production npm run build
+      - run: npm run test
       - run:
           name: Deploy based on branch
           command: |
