--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tslint 'src/**/*.{ts,tsx}' -p tsconfig.json",
     "start": "npm run dev",
     "test": "npm run type-check && npm run lint",
-    "type-check": "tsc",
+    "type-check": "tsc --noEmit",
     "rename-mdx": "(cd src/content/blog; for f in *.md; do mv $f `basename $f .md`.mdx; done;)"
   },
   "engines": {
@@ -76,8 +76,7 @@
     "@types/react-helmet": "^5.0.8",
     "@types/styled-components": "^4.1.8",
     "babel-plugin-emotion": "^10.0.7",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "tslint": "^5.12.1",
     "tslint-config-blvd": "^1.2.1",
