--- a/package.json
+++ b/package.json
@@ -16,72 +16,76 @@
     "rename-mdx": "(cd src/content/blog; for f in *.md; do mv $f `basename $f .md`.mdx; done;)"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": "12"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
-    "@mdx-js/mdx": "^0.16.8",
-    "@mdx-js/tag": "^0.16.8",
-    "@types/react-modal": "^3.8.0",
-    "babel-plugin-styled-components": "^1.10.0",
+    "@babel/core": "^7.0.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/react": "^1.0.0",
+    "@mdx-js/tag": "^0.20.3",
+    "@types/react-modal": "^3.10.5",
+    "babel-plugin-styled-components": "^1.10.7",
     "classnames": "^2.2.6",
-    "emotion": "^10.0.7",
-    "emotion-server": "^10.0.7",
-    "gatsby": "^2.0.116",
-    "gatsby-image": "^2.0.29",
-    "gatsby-link": "^2.0.10",
-    "gatsby-mdx": "0.3.5",
-    "gatsby-plugin-canonical-urls": "^2.0.10",
-    "gatsby-plugin-catch-links": "^2.0.10",
-    "gatsby-plugin-emotion": "^4.0.3",
-    "gatsby-plugin-feed": "^2.0.13",
-    "gatsby-plugin-google-analytics": "^2.0.13",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "^2.0.5",
-    "gatsby-plugin-styled-components": "^3.0.5",
-    "gatsby-plugin-typescript": "^2.0.7",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^3.0.3",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-json": "^2.1.8",
-    "gatsby-transformer-remark": "^2.2.4",
-    "gatsby-transformer-sharp": "^2.1.13",
-    "github-slugger": "^1.2.1",
-    "graphql": "^14.1.1",
-    "lodash-es": "^4.17.11",
-    "modern-normalize": "^0.5.0",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
+    "gatsby": "^2.22.13",
+    "gatsby-image": "^2.4.5",
+    "gatsby-link": "^2.4.3",
+    "gatsby-plugin-canonical-urls": "^2.3.2",
+    "gatsby-plugin-catch-links": "^2.3.3",
+    "gatsby-plugin-emotion": "^4.3.2",
+    "gatsby-plugin-feed": "^2.5.3",
+    "gatsby-plugin-google-analytics": "^2.3.2",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-mdx": "^1.2.13",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.3",
+    "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-plugin-typescript": "^2.4.3",
+    "gatsby-remark-copy-linked-files": "^2.3.3",
+    "gatsby-remark-images": "^3.3.8",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-json": "^2.4.3",
+    "gatsby-transformer-remark": "^2.8.13",
+    "gatsby-transformer-sharp": "^2.5.3",
+    "github-slugger": "^1.3.0",
+    "graphql": "^14.4.1",
+    "lodash-es": "^4.17.15",
+    "modern-normalize": "^0.6.0",
     "normalize.css": "^8.0.1",
-    "polished": "^2.3.3",
-    "prism-themes": "^1.0.1",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.0",
-    "react-anchor-link-smooth-scroll": "^1.0.11",
-    "react-dom": "^16.8.0",
+    "polished": "^3.6.4",
+    "prism-themes": "^1.4.0",
+    "prismjs": "^1.20.0",
+    "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dom": "^16.13.1",
     "react-emotion": "^10.0.0",
-    "react-helmet": "^5.2.0",
-    "react-syntax-highlighter": "^10.1.2",
-    "styled-components": "^4.1.3",
-    "typescript": "^3.3.1"
+    "react-helmet": "^6.0.0",
+    "react-is": "^16.13.1",
+    "react-syntax-highlighter": "^12.2.1",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.7",
-    "@types/lodash-es": "^4.17.1",
-    "@types/node": "^10.12.21",
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-helmet": "^5.0.8",
-    "@types/styled-components": "^4.1.8",
-    "babel-plugin-emotion": "^10.0.7",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "tslint": "^5.12.1",
+    "@types/classnames": "^2.2.10",
+    "@types/lodash-es": "^4.17.3",
+    "@types/node": "^14.0.6",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-syntax-highlighter": "^11.0.4",
+    "@types/styled-components": "^5.1.0",
+    "babel-plugin-emotion": "^10.0.33",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "tslint": "^6.1.2",
     "tslint-config-blvd": "^1.2.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1"
+    "tslint-plugin-prettier": "^2.3.0"
   },
   "resolutions": {
     "graphql": "14.1.1"
