--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
     "lint": "tslint 'src/**/*.{ts,tsx}' -p tsconfig.json",
     "start": "npm run dev",
-    "test": "npm run type-check && npm run lint",
+    "test": "npm run type-check",
     "type-check": "tsc --noEmit",
     "rename-mdx": "(cd src/content/blog; for f in *.md; do mv $f `basename $f .md`.mdx; done;)"
   },
